syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

option csharp_namespace = "EMS.Protos.DataProvider";

service People {
    rpc Add(Person) returns (google.protobuf.StringValue) {
      option(google.api.http) = {
        post: "api/v1/people"
      };
    };
    rpc Update(Person) returns (google.protobuf.Empty) {
      option(google.api.http) = {
        put: "api/v1/people"
      };
    };
    rpc GetAll(google.protobuf.Empty) returns (PeopleReply) {
      option(google.api.http) = {
        get: "api/v1/people"
      };
    };
    rpc GetById(google.protobuf.StringValue) returns (Person) {
      option(google.api.http) = {
        get: "api/v1/people/{id}"
      };
    };
}

message PeopleReply {
  repeated Person data = 1;
}

message Person {
  string id = 1;
  string last_name = 2;
  string first_name = 3;
  string second_name = 4;
  google.protobuf.Timestamp birthday = 5;
  bool gender = 6;
  google.protobuf.StringValue login = 7;
}